Hiba válaszok módosítása